2013-07-09 arnaud.fontaine
* ZODB Components: Update ace_editor to 1.1.01.

2012-02-28 arnaud.fontaine
* Move fullscreen and maximize button at the top of Ace editor (accessibility).

2012-02-15 arnaud.fontaine
* Use uncompressed version of ace editor source code for readability and debugging sake.

2012-02-11 arnaud.fontaine
* Do not show overflow on maximized mode as scrollbars are handled by Ace itself.

2012-02-11 arnaud.fontaine
* Add full-screen class meaningful when this will be accepted by W3C.

2012-01-25 arnaud.fontaine
* Initial release.